--- a/index44.html
+++ b/index44.html
@@ -35,62 +35,62 @@
 
         #virtualJoystick {
             position: absolute;
-            width: 100px;
-            height: 100px;
-            border: 2px solid rgba(255, 255, 255, 0.5);
-            border-radius: 50%;
-            display: none;
-            justify-content: center;
-            align-items: center;
-            animation: fadeIn 0.3s ease-out;
-        }
-
-        #joystickInner {
             width: 50px;
             height: 50px;
-            background-color: rgba(255, 255, 255, 0.7);
+            background-color: rgba(255, 255, 255, 0.3);
             border-radius: 50%;
-            transition: transform 0.1s ease-out;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            animation: glow 2s infinite alternate;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
 
-        @keyframes fadeIn {
+        @keyframes glow {
             0% {
-                opacity: 0;
-                transform: scale(0.5);
+                opacity: 0.3;
             }
             100% {
-                opacity: 1;
-                transform: scale(1);
+                opacity: 0.7;
             }
+        }
+
+        #virtualJoystick.active {
+            background-color: rgba(255, 255, 255, 0.7);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
+            animation: none;
         }
     </style>
 </head>
 <body>
     <!-- Сенсорный ползунок -->
     <div id="touchpad">
-        <div id="virtualJoystick">
-            <div id="joystickInner"></div>
-        </div>
+        <div id="virtualJoystick"></div>
     </div>
 
     <script>
         const touchpad = document.getElementById('touchpad');
         const virtualJoystick = document.getElementById('virtualJoystick');
-        const joystickInner = document.getElementById('joystickInner');
         let isTouching = false;
-        let touchStartX = 0;
-        let touchStartY = 0;
+
+        // Позиционируем джойстик в центре тачпада при загрузке
+        function centerJoystick() {
+            const touchpadRect = touchpad.getBoundingClientRect();
+            virtualJoystick.style.left = `${touchpadRect.width / 2 - 25}px`;
+            virtualJoystick.style.top = `${touchpadRect.height / 2 - 25}px`;
+        }
+
+        // Инициализация: центрируем джойстик
+        centerJoystick();
 
         touchpad.addEventListener('touchstart', (e) => {
             isTouching = true;
             const touchpadRect = touchpad.getBoundingClientRect();
-            touchStartX = e.touches[0].clientX - touchpadRect.left;
-            touchStartY = e.touches[0].clientY - touchpadRect.top;
+            const touchX = e.touches[0].clientX - touchpadRect.left;
+            const touchY = e.touches[0].clientY - touchpadRect.top;
 
-            // Показываем виртуальный джойстик и устанавливаем его позицию
-            virtualJoystick.style.display = 'flex';
-            virtualJoystick.style.left = `${touchStartX - 50}px`; // Центрируем по X
-            virtualJoystick.style.top = `${touchStartY - 50}px`; // Центрируем по Y
+            // Перемещаем джойстик под палец и делаем его ярче
+            virtualJoystick.style.left = `${touchX - 25}px`;
+            virtualJoystick.style.top = `${touchY - 25}px`;
+            virtualJoystick.classList.add('active'); // Убираем пульсацию и делаем ярче
         });
 
         touchpad.addEventListener('touchmove', (e) => {
@@ -100,24 +100,14 @@
             const touchX = e.touches[0].clientX - touchpadRect.left;
             const touchY = e.touches[0].clientY - touchpadRect.top;
 
-            // Ограничиваем движение внутреннего круга в пределах внешнего круга
-            const deltaX = touchX - touchStartX;
-            const deltaY = touchY - touchStartY;
-            const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
-            const maxDistance = 25; // Максимальное расстояние от центра
-
-            if (distance > maxDistance) {
-                const angle = Math.atan2(deltaY, deltaX);
-                joystickInner.style.transform = `translate(${Math.cos(angle) * maxDistance}px, ${Math.sin(angle) * maxDistance}px)`;
-            } else {
-                joystickInner.style.transform = `translate(${deltaX}px, ${deltaY}px)`;
-            }
+            // Обновляем позицию джойстика
+            virtualJoystick.style.left = `${touchX - 25}px`;
+            virtualJoystick.style.top = `${touchY - 25}px`;
         });
 
         touchpad.addEventListener('touchend', () => {
             isTouching = false;
-            virtualJoystick.style.display = 'none'; // Скрываем виртуальный джойстик
-            joystickInner.style.transform = 'translate(0, 0)'; // Возвращаем внутренний круг в центр
+            virtualJoystick.classList.remove('active'); // Возвращаем пульсацию
         });
     </script>
 </body>
