--- a/index.html
+++ b/index.html
@@ -556,6 +556,17 @@
 			loadImage('icons/medkit_temp.png'),
 			loadImage('icons/ammo_temp.png'),
 			loadImage('icons/rocket_temp.png'),
+			
+			loadImage('icons/artrocket.png'),
+			loadImage('icons/difficulty.png'),
+			loadImage('icons/finger.png'),
+			loadImage('icons/health.png'),
+			loadImage('icons/infantry.png'),
+			loadImage('icons/level.png'),
+			loadImage('icons/medal.png'),
+			loadImage('icons/tank.png'),
+			loadImage('icons/trophy.png'),
+			
 			loadAudio('soundtrack/shoot.ogg'),
 			loadAudio('soundtrack/explosion.ogg'),
 			loadAudio('soundtrack/background.ogg'),
